samples/_failures_safe/1761297276_332583_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d386e18.c: In function ‘main’:
./samples/SAFE/__tmp_3d386e18.c:135:15: error: expected ‘;’ at end of input
  135 |         fclose
      |               ^
      |               ;
./samples/SAFE/__tmp_3d386e18.c:135:9: error: expected declaration or statement at end of input
  135 |         fclose
      |         ^~~~~~
./samples/SAFE/__tmp_3d386e18.c:135:9: error: expected declaration or statement at end of input
